--- a/frontend/assets/css/templatemo-seo-dream.css
+++ b/frontend/assets/css/templatemo-seo-dream.css
@@ -208,24 +208,18 @@ body {
 }
 
 .main-blue-button a {
-  display: inline-block;
-  background-color: #4771cb;
-  font-size: 15px;
-  font-weight: 400;
-  color: #fff;
-  text-transform: capitalize;
-  padding: 0px 25px;
-  border-radius: 23px;
-  letter-spacing: 0.25px;
-  border-bottom: 2px solid #fff!important;
-  transition: all .3s;
+  
+  background-color: #FFC300;
+  
 }
 
+/*
 .main-blue-button a:hover {
   background-color: #fff!important;
   color: #4771cb!important;
   border-bottom: 2px solid #4771cb!important;
 }
+*/
 
 .main-green-button a {
   display: inline-block;
